--- a/src/components/dnsEditModal/index.module.less
+++ b/src/components/dnsEditModal/index.module.less
@@ -1,12 +1,17 @@
-.formTitle {
+.title {
   font-size: 20px;
   margin-bottom: 20px;
 }
 
-.formWrapper {
-  :global {
-    .ant-form > .ant-form-item {
-      margin-bottom: 8px !important;
-    }
-  }
+.packageTable {
 }
+
+.serverTable {
+}
+// .formWrapper {
+//   :global {
+//     .ant-form > .ant-form-item {
+//       margin-bottom: 8px !important;
+//     }
+//   }
+// }
