--- a/src/pages/globalAclConfig/index.module.less
+++ b/src/pages/globalAclConfig/index.module.less
@@ -1,3 +1,36 @@
 .container {
-  background-color: transparent;
+  background-color: rgb(246, 244, 244);
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+
+  .headerSection {
+    background-color: white;
+    padding: 15px 10px;
+    text-align: left;
+    margin-left: 10px;
+
+    .bread {
+    }
+    .title {
+      font-size: 20px;
+      color: black;
+    }
+    .descSection {
+      color: lightgrey;
+    }
+  }
+
+  .formWrapper {
+    background-color: white;
+    margin-top: 10px;
+    margin-left: 10px;
+    flex: 1;
+    justify-content: center;
+    padding: 30px 100px 20px 100px;
+
+    .textArea {
+    }
+  }
 }
