--- a/src/components/clientUpdateEditModal/index.module.less
+++ b/src/components/clientUpdateEditModal/index.module.less
@@ -7,6 +7,17 @@
   :global {
     .ant-form > .ant-form-item {
       margin-bottom: 8px !important;
+
+      .ant-row {
+        flex-wrap: row nowrap;
+      }
+
+      .ant-checkbox-wrapper {
+        position: absolute;
+        width: max-content;
+        margin-left: 20px;
+        line-height: 32px;
+      }
     }
   }
 }
