--- a/src/components/gameConfigBasicInfoModal/index.module.less
+++ b/src/components/gameConfigBasicInfoModal/index.module.less
@@ -7,6 +7,19 @@
   :global {
     .ant-form > .ant-form-item {
       margin-bottom: 8px !important;
+
+      .ant-row {
+        flex-flow: row nowrap;
+      }
+
+      .ant-form-item-control-input-content {
+        display: flex;
+      }
+
+      .ant-input {
+        width: 200px;
+        margin-right: 20px;
+      }
     }
   }
 }
