--- a/src/components/viewPackageAndServerModal/index.module.less
+++ b/src/components/viewPackageAndServerModal/index.module.less
@@ -1,12 +1,22 @@
-.formTitle {
+.title {
   font-size: 20px;
   margin-bottom: 20px;
 }
 
-.formWrapper {
-  :global {
-    .ant-form > .ant-form-item {
-      margin-bottom: 8px !important;
+.packageTable {
+  .addLine {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 38px 0 18px;
+    margin-bottom: 10px;
+
+    .leftInput {
+      width: 200px;
+      margin-left: 20px;
+    }
+
+    .addBtn {
     }
   }
 }
