--- a/src/pages/aclGroupConfig/index.module.less
+++ b/src/pages/aclGroupConfig/index.module.less
@@ -11,8 +11,6 @@
     text-align: left;
     margin-left: 10px;
 
-    .bread {
-    }
     .title {
       font-size: 20px;
       color: black;
@@ -21,18 +19,27 @@
       color: lightgrey;
       display: flex;
       justify-content: space-between;
+
+      .operator {
+        padding-right: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .addBtn {
+          margin-left: 20px;
+          height: 22px;
+          font-size: 12px;
+          padding: 0 5px;
+        }
+      }
     }
   }
 
-  .formWrapper {
-    background-color: white;
-    margin-top: 10px;
-    margin-left: 10px;
-    flex: 1;
-    justify-content: center;
-    padding: 30px 100px 20px 100px;
-
-    .textArea {
-    }
+  .editBtn {
+    width: 40px;
+    height: 22px;
+    padding: 0;
+    font-size: 12px;
   }
 }
