--- a/src/pages/dnsConfig/index.module.less
+++ b/src/pages/dnsConfig/index.module.less
@@ -10,15 +10,23 @@
       padding-left: 16px;
     }
 
-    .search {
-      width: 300px;
-    }
+    .operator {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding-right: 20px;
 
-    .addNewBtn {
-      width: auto;
-      height: 20px;
-      font-size: 12px;
-      padding: 0 7px;
+      .search {
+        width: 200px;
+      }
+
+      .addNewBtn {
+        width: auto;
+        height: 20px;
+        font-size: 12px;
+        padding: 0 7px;
+        margin-left: 20px;
+      }
     }
   }
   .table {
