[Wenqiang] feat: add upload image logic

--- a/src/components/gameConfigBasicInfoModal/index.module.less
+++ b/src/components/gameConfigBasicInfoModal/index.module.less
@@ -14,6 +14,7 @@
 
       .ant-form-item-control-input-content {
         display: flex;
+        align-items: center;
       }
 
       .ant-input {
@@ -21,5 +22,31 @@
         margin-right: 20px;
       }
     }
+  }
+
+  input[type="file"]::file-selector-button {
+    display: none;
+  }
+
+  .input {
+    width: 188px;
+    border: 1px solid #d9d9d9;
+    border-radius: 6px;
+    margin-right: 20px;
+    padding-left: 12px;
+    line-height: 32px;
+  }
+
+  .iconImg,
+  .bannerImg {
+    height: 40px;
+  }
+
+  .characterImg {
+    height: 100px;
+  }
+
+  .uploadBtn {
+    margin-right: 15px;
   }
 }
