--- a/src/pages/globalAclConfig/index.module.less
+++ b/src/pages/globalAclConfig/index.module.less
@@ -11,8 +11,6 @@
     text-align: left;
     margin-left: 10px;
 
-    .bread {
-    }
     .title {
       font-size: 20px;
       color: black;
@@ -31,6 +29,8 @@
     padding: 30px 100px 20px 100px;
 
     .textArea {
+      margin-top: 20px;
+      margin-bottom: 40px;
     }
   }
 }
