[wenqiang] feat: edit boost config

--- a/src/components/gameAccelerateConfigEditModal/index.module.less
+++ b/src/components/gameAccelerateConfigEditModal/index.module.less
@@ -6,8 +6,9 @@
   :global {
     .ant-form > .ant-form-item {
       margin-bottom: 8px !important;
+      flex-flow: row nowrap;
       .ant-form-item-label-left {
-        flex: 0 0 120px !important;
+        flex: 0 0 130px !important;
       }
     }
   }
