[wenqiang] feat: add placeholder for input element

--- a/src/components/viewPackageAndServerModal/index.module.less
+++ b/src/components/viewPackageAndServerModal/index.module.less
@@ -8,15 +8,22 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 38px 0 18px;
+    padding: 0 22px 0 18px;
     margin-bottom: 10px;
 
     .leftInput {
       width: 200px;
       margin-left: 20px;
     }
-
-    .addBtn {
-    }
   }
+}
+
+.serverTable {
+  display: flex;
+  flex-direction: column;
+}
+
+.addBtn {
+  margin-right: 90px;
+  align-self: flex-end;
 }
