--- a/src/components/gameConfigRegionServerEditModal/index.module.less
+++ b/src/components/gameConfigRegionServerEditModal/index.module.less
@@ -6,6 +6,10 @@
   :global {
     .ant-form > .ant-form-item {
       margin-bottom: 8px !important;
+
+      .ant-form-item-row {
+        flex-flow: row nowrap;
+      }
     }
   }
 }
