--- a/src/components/gameAccelerateConfigEditModal/index.module.less
+++ b/src/components/gameAccelerateConfigEditModal/index.module.less
@@ -6,9 +6,12 @@
   :global {
     .ant-form > .ant-form-item {
       margin-bottom: 8px !important;
-      flex-flow: row nowrap;
+
       .ant-form-item-label-left {
         flex: 0 0 130px !important;
+      }
+      .ant-row {
+        flex-flow: row nowrap;
       }
     }
   }
