[wenqiang] feat: add scroll for table

--- a/src/pages/appPage/index.module.less
+++ b/src/pages/appPage/index.module.less
@@ -2,11 +2,7 @@
   color: black;
   display: flex;
   flex-direction: column;
-  height: 100vh;
-
-  //   .header {
-  //     display: flex;
-  //   }
+  // height: 100vh;
 
   .content {
     height: 100%;
