--- a/src/components/navigator/index.module.less
+++ b/src/components/navigator/index.module.less
@@ -1,6 +1,6 @@
 .container {
   min-width: 200px;
-  height: 100%;
+  height: calc(100vh - 50px);
   border-right: 1px solid lightgray;
 
   :global {
