--- a/src/pages/nodeConfig/index.module.less
+++ b/src/pages/nodeConfig/index.module.less
@@ -1,4 +1,7 @@
 .container {
+  height: calc(100vh - 50px);
+  overflow: auto;
+
   .header {
     display: flex;
     justify-content: space-between;
