[wenqiang] feat: layout modification for game basic info modal

--- a/src/components/gameConfigBasicInfoModal/index.module.less
+++ b/src/components/gameConfigBasicInfoModal/index.module.less
@@ -10,6 +10,10 @@
 
       .ant-row {
         flex-flow: row nowrap;
+
+        .ant-form-item-label {
+          margin: auto;
+        }
       }
 
       .ant-form-item-control-input-content {
@@ -38,12 +42,9 @@
   }
 
   .iconImg,
-  .bannerImg {
-    height: 40px;
-  }
-
+  .bannerImg,
   .characterImg {
-    height: 100px;
+    max-height: 100px;
   }
 
   .uploadBtn {
