--- a/src/components/gameConfigBasicInfoModal/index.module.less
+++ b/src/components/gameConfigBasicInfoModal/index.module.less
@@ -41,6 +41,10 @@
     line-height: 32px;
   }
 
+  .input:disabled {
+    background-color: rgba(0, 0, 0, 0.04);
+  }
+
   .iconImg,
   .bannerImg,
   .characterImg {
