[Wenqiang] fix:  select options value correction for game page

--- a/src/components/viewPackageAndServerModal/index.module.less
+++ b/src/components/viewPackageAndServerModal/index.module.less
@@ -24,6 +24,15 @@
   flex-direction: column;
 }
 
+.serverTable,
+.packageTable {
+  :global {
+    .ant-btn {
+      margin-right: 10px;
+    }
+  }
+}
+
 .addBtn {
   margin-right: 92px;
   align-self: flex-end;
